tests/baselines/reference/methodInAmbientClass1.errors.txt
tests/cases/compiler/methodInAmbientClass1.ts(2,12): error TS2847: A function with this return type needs to explicitly return a value.
tests/cases/compiler/methodInAmbientClass1.ts(2,20): error TS1183: An implementation cannot be declared in ambient contexts.


==== tests/cases/compiler/methodInAmbientClass1.ts (2 errors) ====
        declare class Foo {
        	fn(): boolean {
        	      ~~~~~~~
!!! error TS2847: A function with this return type needs to explicitly return a value.
        	              ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        	}
        }